--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>hacker</p>
+        <p>I’m someone who loves expressing myself 
+            through dancing and creating. Graphic and web design are 
+            my passions, where I get to turn ideas into something visually amazing.</p>
     </section>
 
     <section id="portfolio" class="portfolio">
