modify About Me

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>Im someone who loves expressing myself 
-            through dancing and creating. Graphic and web design are 
-            my passions, where I get to turn ideas into something visually amazing.</p>
+        <p>I am someone who loves expressing myself through dancing.</p>
     </section>
 
     <section id="portfolio" class="portfolio">
