--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <h2>Portfolio</h2>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>Description of Project 1...</p>
+            <h3>Portfolio Project</h3>
+            <p>A portfolio about myself.</p>
         </div>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
-            <h3>Project 2</h3>
-            <p>Description of Project 2...</p>
+            <h3>To Do List Application</h3>
+            <p>An application where you can put what you will do for a day, week, or month</p>
         </div>
         <!-- Add more portfolio items as needed -->
     </section>
